# Fundamentals-of-algorithmization-and-programming

353501/Загрещенко А.С./LabWork_4/Task_1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
353501/Загрещенко А.С./Курсовой проект/source/: CMakeLists.txt  qbrick.cpp  qresetbutton.h  subject.h
353501/Маслаков С.А./LabWork_7/: CMakeLists.txt
353501/Маслаков С.А./LabWork_7/Task_1/: Queue.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_7/Task_2/: BST.h  BSTui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_7/Task_3/: HashMap.h  HashMapUi.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_7/Task_4/: HashMap.h  HashMapUi.h  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_7/Task_5/: mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_8/: CMakeLists.txt
353501/Маслаков С.А./LabWork_8/Task_1/: BST.h  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_8/Task_2/: ArrayHeap.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Маслаков С.А./LabWork_8/Task_3/: RBTree.h
353501/Полянский М.А./LabWork_6/: CMakeLists.txt
353501/Полянский М.А./LabWork_6/Task_1/: Kidtoy.cpp  Kidtoy.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Полянский М.А./LabWork_6/Task_2/: Footwear.cpp  Footwear.h  mainwindow.cpp  mainwindow.h
353501/Полянский М.А./LabWork_7/: CMakeLists.txt
353501/Полянский М.А./LabWork_7/Task_1/: Dqueue.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Полянский М.А./LabWork_7/Task_2/: Searchtree.h  VisualBST.cpp  VisualBST.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Полянский М.А./LabWork_7/Task_3/: HashTable.h  VisualHashMap.cpp  VisualHashMap.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Полянский М.А./LabWork_8/: CMakeLists.txt
353501/Полянский М.А./LabWork_8/Task_1/: SearchTree.h  VisualBST.cpp  VisualBST.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Полянский М.А./LabWork_8/Task_2/: ArrayHeap.cpp  TreeHeap.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Супоненко М.А./LabWork_7/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.cpp  queue.h
353501/Супоненко М.А./LabWork_8/Task_2/: CMakeLists.txt  array_heap.cpp  array_heap.h  list_heap.cpp  list_heap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
353501/Супоненко М.А./LabWork_8/Task_3/: CMakeLists.txt  RBTree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  redblacktree.cpp  redblacktree.h  treeviewwidget.cpp  treeviewwidget.h
353502/Петроченко М.М./LabWork_1/: CMakeLists.txt
353502/Петроченко М.М./LabWork_1/Task_1/: main.cpp  plane.cpp  plane.h  plane.ui  rectangle.cpp  rectangle.h  rectangle.ui
353502/Петроченко М.М./LabWork_1/Task_2/: canvas.cpp  canvas.h  canvas.ui  main.cpp  mainwindow.cpp  redactarea.cpp  redactarea.h  redactarea.ui
353502/Петроченко М.М./LabWork_2/: CMakeLists.txt
353502/Петроченко М.М./LabWork_2/Task_1/: Date.cpp  Date.h  DateException.cpp  DateException.h  QTableViewModel.cpp  QTableViewModel.h  files.cpp  files.h  inputpopup.cpp  inputpopup.h  inputpopup.ui  main.cpp  mainwindow.cpp  mainwindow.h  test.cpp
353502/Петроченко М.М./LabWork_2/Task_2/: Candidate.cpp  Candidate.h  Party.cpp  Party.h  cand.txt  files.cpp  files.h  main.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_2/Task_3/: BinaryExpression.cpp  BinaryExpression.h  Expression.h  Number.cpp  main.cpp
353502/Петроченко М.М./LabWork_2/Task_4/: BinaryExpression.s  Number.h
353502/Петроченко М.М./LabWork_3/: CMakeLists.txt
353502/Петроченко М.М./LabWork_3/Task_1/: converter.cpp  converter.h  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_3/Task_2/: ackerman.cpp  ackerman.h  main.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_3/Task_3/: converter.cpp  converter.h  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_3/Task_4/: hanoi.cpp  hanoi.h  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_3/Task_5/: counter.cpp  counter.h  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_4/: CMakeLists.txt
353502/Петроченко М.М./LabWork_4/Task_1/: binpow.cpp  binsearch.cpp  binsearch.h  main.cpp  mainwindow.ui  sortingalgs.cpp  sortingalgs.h
353502/Петроченко М.М./LabWork_4/Task_2/: mainwindow.h
353502/Петроченко М.М./LabWork_4/Task_3/: binpow.h
353502/Петроченко М.М./LabWork_4/Task_4/: library.cpp  mainwindow2.cpp
353502/Петроченко М.М./LabWork_4/Task_5/: iterator.cpp  main2.cpp  mainwindow2.h  mainwindow2.ui
353502/Петроченко М.М./LabWork_5/: CMakeLists.txt
353502/Петроченко М.М./LabWork_5/Task_1/: keyboard.cpp  keyboard.h  keyboard.ui  layouts.h  main.cpp  mainwindow.cpp  mainwindow.h  textedit.cpp  textedit.h  textedit.ui  texts.h
353502/Петроченко М.М./LabWork_5/Task_2/: iterator.cpp  iterator.h  main_str.cpp  string.cpp  string.h
353502/Петроченко М.М./LabWork_5/Task_3/: main.cpp  mybitset.cpp  mybitset.h  reference.cpp  reference.h
353502/Петроченко М.М./LabWork_6/: CMakeLists.txt
353502/Петроченко М.М./LabWork_6/Task_1/: main.cpp  mainwindow.cpp  mainwindow.h  smartphone.cpp  smartphone.h
353502/Петроченко М.М./LabWork_6/Task_2/: main2.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_7/: CMakeLists.txt
353502/Петроченко М.М./LabWork_7/Task_1/: main.cpp  mainwindow.cpp  mainwindow.h  queue.h
353502/Петроченко М.М./LabWork_7/Task_2/: avl.h  graphview.cpp  graphview.h  main.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_7/Task_3/: TaskSolver.cpp  TaskSolver.h  hashtable.h  main.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_7/Task_4/: HashTable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353502/Петроченко М.М./LabWork_7/Task_5/: deque.h  main.cpp  mainwindow.cpp  mainwindow.h
353502/Петроченко М.М./LabWork_8/: CMakeLists.txt
353502/Петроченко М.М./LabWork_8/Task_2/: bin_heap_list.h  bin_heap_vec.h  main.cpp  mainwindow.cpp
353502/Петроченко М.М./LabWork_8/Task_3/: graphview.cpp  graphview.h  (+1 more)
(+5921 files in other folders)
